# nixmac

./: .envrc  .eslintrc.cjs  .gitattributes  .gitignore  .gitmodules  .linear.toml  .mergify.yml  .oxlintrc.json  .release-it.json  .secrets.enc.yaml  .sops.yaml  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  Cargo.toml  DOLT_REMOTE.md  LICENSE  Makefile  README.md  biome.json  bts.jsonc  bun.nix  dangerfile.ts  devenv.nix  devenv.yaml  docker-compose.devenv.yml  evolveresult.json  flake.nix  justfile  knip.json  manifest  package.json  tsconfig.json  turbo.json  vercel.json
apps/eval/: .gitignore  AUDIT.md  README.md  SCORECARD.md  calc_stats.py  cli.py  compare_runs.py  generate_report.py  grade.py  llm_judge.py  pyproject.toml  ruff.toml  run_evals.py
apps/eval/data/: README.md  dimensions-of-variation.xlsx  golden_set_expectations.json  golden_set_expectations_arximboldi.json  test_prompts.csv  test_prompts_arximboldi.csv  test_prompts_short.csv
apps/eval/report/: diff_html.py  loader.py  render.py  stats.py  viewmodel.py
apps/eval/report/assets/: report.js  style.css
apps/eval/report/templates/: base.html.j2  case.html.j2  index.html.j2
apps/eval/tests/: test_grade.py  test_run_evals.py
apps/eval/wip/: agent-improvements-combined-plan.md  arximboldi-agent-improvements.md  eval-suite-findings.md  evolve-loop-convergence-followups.md  external_base_config-plan.md  general-agent-improvements.md  generate_report-design.md  generate_report-plan.md
apps/native/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements-helper-client.plist  entitlements-helper.plist  entitlements.plist  signing-team-id  tauri.conf.dev.json  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json  http.json  macos-passkey.json
apps/native/src-tauri/configurable/: Cargo.toml
apps/native/src-tauri/configurable-derive/: Cargo.toml
apps/native/src-tauri/configurable-derive/src/: attrs.rs  codegen.rs  fields.rs  lib.rs  strings.rs  types.rs
apps/native/src-tauri/configurable/src/: lib.rs
apps/native/src-tauri/examples/: export_bindings.rs  specta_gen_ts.rs
apps/native/src-tauri/icons/: icon.icns
apps/native/src-tauri/icons/icns/: icon_1024x1024_1024x1024.icns  icon_128x128_128x128.icns  icon_16x16_16x16.icns  icon_256x256_256x256.icns  icon_32x32_32x32.icns  icon_512x512_512x512.icns  icon_64x64_64x64.icns
apps/native/src-tauri/migrations/01-initial/: up.sql
apps/native/src-tauri/migrations/02-restore-commits/: up.sql
apps/native/src-tauri/migrations/03-build-records/: up.sql
apps/native/src-tauri/migrations/03-drop-queued-summaries/: up.sql
apps/native/src-tauri/migrations/03-evolutions-origin-branch/: up.sql
apps/native/src-tauri/prompts/: evolve_group.md  new_group.md  summarize_single.md  system.md
apps/native/src-tauri/resources/: home-manager-docs.json  home-manager-options.json  nix-darwin-docs.html  nix-darwin-docs.json  nix-darwin-options.json  nixos-options.json
apps/native/src-tauri/resources/launchd/: com.darkmatter.nixmac.helper.plist  com.darkmatter.nixmac.sync-agent.plist
apps/native/src-tauri/resources/schemas/: env.schema.json  settings.schema.json
apps/native/src-tauri/scripts/: clear-logs.sh  tauri-dev.sh
apps/native/src-tauri/src/: README.md  apply_system_defaults.rs  build_state.rs  changes_from_diff.rs  cli.rs  commands.rs  completion_log.rs  credential_store.rs  darwin.rs  default_config.rs  e2e_runtime.rs  e2e_support.rs  editor.rs  env_keys.rs  evolution.rs  evolve_state.rs  feedback.rs  finalize_apply.rs  finalize_restore.rs  find_change_summaries.rs  find_summary.rs  generate_history_from.rs  get_history.rs  git.rs  historelog.rs  legacy_summarize.rs  log_summarizer.rs  lsp.rs  main.rs  managed_edit.rs  nix.rs  nix_ast_lists.rs  observable.rs  panic_handler.rs  peek.rs  permissions.rs  provider_errors.rs  query_return_types.rs  record_manual_changes.rs  rollback.rs  (+19 more)
apps/native/src-tauri/src/ai/: defaults.rs  log_summarizer.rs  mod.rs  model_capabilities.rs
apps/native/src-tauri/src/bootstrap/: default_config.rs  discover.rs  import.rs  mod.rs  template.rs
apps/native/src-tauri/src/commands/: account.rs  apply.rs  cli_tool.rs  config.rs  debug.rs  dev_configs.rs  editor.rs  evolve.rs  evolve_state.rs  feedback.rs  git.rs  github.rs  helpers.rs  homebrew.rs  launchd.rs  mock_sentry.rs  mod.rs  onboarding.rs  peek.rs  permissions.rs  rollback.rs  settings_io.rs  summarize.rs  system_defaults.rs  ui_prefs.rs  updater.rs
apps/native/src-tauri/src/db/: builds.rs  changesets.rs  commits.rs  evolution_commits.rs  evolutions.rs  mod.rs  operations.rs  pool.rs  prompts.rs  restore_commits.rs  schema.rs  squashed_commits.rs  store_bare_changeset.rs  store_evolved_changeset.rs  store_new_changeset.rs  store_whole_diff_changeset.rs  summaries.rs  tables.rs
apps/native/src-tauri/src/docs/: docs_system.rs  generated_docs.rs  mod.rs  static_docs.rs
apps/native/src-tauri/src/editor/: lsp.rs  mod.rs
apps/native/src-tauri/src/env/: config.rs  mod.rs  sources.rs
apps/native/src-tauri/src/evolve/: age.rs  chat_memory.rs  config.rs  config_dir_context.rs  edit_nix_file.rs  ensure_secret.rs  file_ops.rs  gitignore.rs  homebrew_adopt.rs  lifecycle.rs  messages.rs  mod.rs  nix_file_editor.rs  nixmac_ignore.rs  run_command.rs  search_code.rs  search_docs.rs  search_packages.rs  session_control.rs  sops.rs  tools.rs  types.rs  utils.rs
apps/native/src-tauri/src/git/: auth.rs  auto_update.rs  changes_from_diff.rs  exec.rs  init.rs  mod.rs  query.rs  repo_files.rs
apps/native/src-tauri/src/history/: get_history.rs  mod.rs
apps/native/src-tauri/src/http_client/: mod.rs
apps/native/src-tauri/src/mac/: homebrew.rs  mod.rs
apps/native/src-tauri/src/managed_edits/: homebrew_adopt.rs  managed_edit.rs  mod.rs  system_defaults.rs
apps/native/src-tauri/src/observable/: mod.rs  persistence.rs
apps/native/src-tauri/src/orpc/: account.rs  billing.rs  cli.rs  config.rs  darwin.rs  dev_configs.rs  editor.rs  evolve_mascot.rs  evolve_state.rs  feedback.rs  flake.rs  git.rs  github.rs  helpers.rs  history.rs  homebrew.rs  launchd.rs  lsp.rs  (+15 more)
(+11581 files in other folders)
