[workspace]
members = [
  "apps/native/src-tauri",
  "apps/native/src-tauri/configurable",
  "apps/native/src-tauri/configurable-derive",
]
resolver = "2"

[workspace.lints.rust]
unused = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.profiling]
inherits = "release"
debug = true
