[package]
name = "nixmac"
version = "0.22.0"
description = "Nixmac - macOS nix-darwin configuration manager"
authors = ["Darkmatter Labs"]
license = "MIT"
edition = "2021"

[lints.rust]
unused = "deny"
unexpected_cfgs = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
  "protocol-asset",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-process = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-websocket = "2.0.0"
tauri-plugin-window-state = "2.0.0"

tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tauri-plugin-keyring = "0.1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
dirs = "5"
tempfile = "3.23.0"
async-openai = "0.30.1"
async-trait = "0.1"
glob = "0.3"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
similar = "2.7.0"
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-upload = "2.0.0"
tauri-plugin-macos-permissions = "2.3.0"
sentry = "0.42.0"
tauri-plugin-sentry = "0.5"
sha2 = "0.10.9"
hex = "0.4.3"
regex = "1.12.3"
tauri-plugin-http = "2"
fancy-regex = "0.17.0"
toml = "1.0.3"
backtrace = "0.3"
clap = { version = "4", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
rnix = "0.14.0"
serde_yaml = "0.9"
rowan = "0.16.1"
fuzzy-matcher = "0.3.7"
rusqlite_migration = "1.2"
tauri-plugin-webdriver-automation = "0.1.3"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dependencies.tera]
version = "1"
