[package]
name = "nixmac"
version = "0.22.0"
description = "Nixmac - macOS nix-darwin configuration manager"
authors = ["Darkmatter Labs"]
license = "MIT"
edition = "2021"

[lints.rust]
unused = "deny"
unexpected_cfgs = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
  "protocol-asset",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-process = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-websocket = "2.0.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tauri-plugin-keyring = "0.1.0"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
dirs = "5"
tempfile = "3.23.0"
async-openai = "0.30.1"
async-trait = "0.1"
glob = "0.3"
git2 = "0.21.0"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2"
r2d2 = "0.8"
# Pin libsqlite3-sys with bundled so Diesel uses a self-contained sqlite
# rather than a system one — rusqlite previously carried this flag.
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
tauri-plugin-upload = "2.0.0"
tauri-plugin-macos-permissions = "2.3.0"
tracing = "0.1"
sha2 = "0.10.9"
hex = "0.4.3"
regex = "1.12.3"
tauri-plugin-http = "2"
fancy-regex = "0.17.0"
toml = "1.0.3"
backtrace = "0.3"
clap = { version = "4", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
specta-typescript = "0.0.9"
rnix = "0.14.0"
serde_yaml = "0.9"
rowan = "0.16.1"
fuzzy-matcher = "0.3.7"
tauri-plugin-webdriver-automation = "0.1.3"
tiktoken-rs = "0.6"
url = "2"
opentelemetry = "0.29"
opentelemetry_sdk = "0.29"
opentelemetry-otlp = { version = "0.29", features = [
  "trace",
  "logs",
  "http-proto",
  "reqwest-client",
] }
opentelemetry-appender-tracing = "0.29"
tracing-opentelemetry = "0.30"
configurable = { path = "configurable" }
hmac = "0.12"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2.5.0"
plist = "1.9.0"
whoami = "2.1.2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dependencies.tera]
version = "1"
