[package]
name = "configurable"
version = "0.1.0"
edition = "2021"
description = "Derive macro + runtime for typed, store-backed dev settings"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
tauri = { version = "2" }
tauri-plugin-store = "2"
configurable-derive = { path = "../configurable-derive" }
